// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhoneMockup hero renders at custom size 1`] = `
<View
  style={
    [
      {
        "alignSelf": "center",
        "padding": 16,
      },
      {
        "height": 270,
        "width": 240,
      },
    ]
  }
>
  <Svg
    height={270}
    viewBox="0 0 320 360"
    width={240}
  >
    <Defs>
      <LinearGradient
        id="phoneGrad"
        x1="0"
        x2="1"
        y1="0"
        y2="1"
      >
        <Stop
          offset="0%"
          stopColor="#1A1A1E"
        />
        <Stop
          offset="60%"
          stopColor="#0A0A0B"
        />
        <Stop
          offset="100%"
          stopColor="#000000"
        />
      </LinearGradient>
    </Defs>
    <G
      transform="matrix(0.97 0 -0.18 0.94 32 8)"
    >
      <Rect
        fill="url(#phoneGrad)"
        height={312}
        rx={24}
        ry={24}
        testID="phone-mockup-frame"
        width={192}
        x={64}
        y={24}
      />
      <Rect
        fill="#F8F8FA"
        height={296}
        rx={16}
        ry={16}
        width={176}
        x={72}
        y={32}
      />
      <Rect
        fill="#D1D5DB"
        height={8}
        rx={4}
        width={80}
        x={84}
        y={56}
      />
      <Rect
        fill="#0A0A0B"
        height={12}
        rx={4}
        width={140}
        x={84}
        y={72}
      />
      <Rect
        fill="#FFFFFF"
        height={96}
        rx={16}
        stroke="#E5E7EB"
        strokeWidth={1}
        testID="phone-mockup-product-0"
        width={152}
        x={84}
        y={96}
      />
      <Rect
        fill="#E5E7EB"
        height={48}
        rx={8}
        width={48}
        x={96}
        y={108}
      />
      <Rect
        fill="#0A0A0B"
        height={10}
        rx={3}
        width={70}
        x={156}
        y={112}
      />
      <Rect
        fill="#6B7280"
        height={8}
        rx={3}
        width={48}
        x={156}
        y={128}
      />
      <Rect
        fill="#6B7280"
        height={8}
        rx={3}
        width={36}
        x={156}
        y={144}
      />
      <Rect
        fill="none"
        height={108}
        opacity={0.4}
        rx={22}
        stroke="#10B981"
        strokeWidth={4}
        testID="phone-mockup-glow"
        width={164}
        x={78}
        y={202}
      />
      <Rect
        fill="#FFFFFF"
        height={96}
        rx={16}
        stroke="#10B981"
        strokeWidth={2}
        testID="phone-mockup-product-1"
        width={152}
        x={84}
        y={208}
      />
      <Rect
        fill="#10B981"
        height={48}
        opacity={0.15}
        rx={8}
        width={48}
        x={96}
        y={220}
      />
      <Rect
        fill="#0A0A0B"
        height={10}
        rx={3}
        width={70}
        x={156}
        y={224}
      />
      <Rect
        fill="#6B7280"
        height={8}
        rx={3}
        width={48}
        x={156}
        y={240}
      />
      <Rect
        fill="#10B981"
        height={22}
        rx={11}
        testID="phone-mockup-winner-badge"
        width={80}
        x={96}
        y={270}
      />
      <Path
        d="M106 281 l3 3 l8 -8"
        fill="none"
        stroke="#FFFFFF"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
      />
      <Rect
        fill="#2A2A2F"
        height={4}
        rx={2}
        width={48}
        x={136}
        y={328}
      />
      <Circle
        cx={160}
        cy={40}
        fill="#2A2A2F"
        r={4}
      />
    </G>
  </Svg>
</View>
`;

exports[`PhoneMockup hero renders default snapshot 1`] = `
<View
  style={
    [
      {
        "alignSelf": "center",
        "padding": 16,
      },
      {
        "height": 360,
        "width": 320,
      },
    ]
  }
>
  <Svg
    height={360}
    viewBox="0 0 320 360"
    width={320}
  >
    <Defs>
      <LinearGradient
        id="phoneGrad"
        x1="0"
        x2="1"
        y1="0"
        y2="1"
      >
        <Stop
          offset="0%"
          stopColor="#1A1A1E"
        />
        <Stop
          offset="60%"
          stopColor="#0A0A0B"
        />
        <Stop
          offset="100%"
          stopColor="#000000"
        />
      </LinearGradient>
    </Defs>
    <G
      transform="matrix(0.97 0 -0.18 0.94 32 8)"
    >
      <Rect
        fill="url(#phoneGrad)"
        height={312}
        rx={24}
        ry={24}
        testID="phone-mockup-frame"
        width={192}
        x={64}
        y={24}
      />
      <Rect
        fill="#F8F8FA"
        height={296}
        rx={16}
        ry={16}
        width={176}
        x={72}
        y={32}
      />
      <Rect
        fill="#D1D5DB"
        height={8}
        rx={4}
        width={80}
        x={84}
        y={56}
      />
      <Rect
        fill="#0A0A0B"
        height={12}
        rx={4}
        width={140}
        x={84}
        y={72}
      />
      <Rect
        fill="#FFFFFF"
        height={96}
        rx={16}
        stroke="#E5E7EB"
        strokeWidth={1}
        testID="phone-mockup-product-0"
        width={152}
        x={84}
        y={96}
      />
      <Rect
        fill="#E5E7EB"
        height={48}
        rx={8}
        width={48}
        x={96}
        y={108}
      />
      <Rect
        fill="#0A0A0B"
        height={10}
        rx={3}
        width={70}
        x={156}
        y={112}
      />
      <Rect
        fill="#6B7280"
        height={8}
        rx={3}
        width={48}
        x={156}
        y={128}
      />
      <Rect
        fill="#6B7280"
        height={8}
        rx={3}
        width={36}
        x={156}
        y={144}
      />
      <Rect
        fill="none"
        height={108}
        opacity={0.4}
        rx={22}
        stroke="#10B981"
        strokeWidth={4}
        testID="phone-mockup-glow"
        width={164}
        x={78}
        y={202}
      />
      <Rect
        fill="#FFFFFF"
        height={96}
        rx={16}
        stroke="#10B981"
        strokeWidth={2}
        testID="phone-mockup-product-1"
        width={152}
        x={84}
        y={208}
      />
      <Rect
        fill="#10B981"
        height={48}
        opacity={0.15}
        rx={8}
        width={48}
        x={96}
        y={220}
      />
      <Rect
        fill="#0A0A0B"
        height={10}
        rx={3}
        width={70}
        x={156}
        y={224}
      />
      <Rect
        fill="#6B7280"
        height={8}
        rx={3}
        width={48}
        x={156}
        y={240}
      />
      <Rect
        fill="#10B981"
        height={22}
        rx={11}
        testID="phone-mockup-winner-badge"
        width={80}
        x={96}
        y={270}
      />
      <Path
        d="M106 281 l3 3 l8 -8"
        fill="none"
        stroke="#FFFFFF"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
      />
      <Rect
        fill="#2A2A2F"
        height={4}
        rx={2}
        width={48}
        x={136}
        y={328}
      />
      <Circle
        cx={160}
        cy={40}
        fill="#2A2A2F"
        r={4}
      />
    </G>
  </Svg>
</View>
`;
